syntax = "proto3";
package notification;
option go_package = "./pb";

message NotificationSubject{
    int64 id=1;
    int64 user_id=2;
    int32 message_type=3;
    string create_time=4;
    string update_time=5;
}

message NotificationContent{
    int64 subject_id=1;
    string title=2;
    string content=3;
    string url=4;
    int32 attrs=5;
    string create_time=6;
    string update_time=7;
}