syntax = "proto3";
package crud;
option go_package = "./pb";

message PublishNotificationReq{
    int64 user_id=1;
    int32 message_type=2;
    string title=3;
    string content=4;
    string url=5;
}
message PublishNotificationRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
}

message DeleteNotificationReq{
    int64 message_id=1;
}
message DeleteNotificationRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
}


service Crud{
    rpc PublishNotification(PublishNotificationReq) returns(PublishNotificationRes);
    rpc DeleteNotification(DeleteNotificationReq) returns(DeleteNotificationRes);
}